--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -4,13 +4,15 @@
     padding: 15px 10px 15px 10px;
     
     &__wrap {
-        @include flex-column-center;
+        display: flex;
+        flex-direction: column;
+        //@include flex-column-center;
         align-self: stretch;
-        padding-right: 10px;
         padding-left: 10px;
+        //padding-left: 10px;
     }
     &__h2 {
-        align-self: flex-start;
+        //align-self: flex-start;
         margin-top: 0px;
         color: map-get($text-colors, secondary);
         font-family: $title-font;
@@ -18,10 +20,10 @@
         //font-size: 1rem;
     }
     &__ul{
-        align-self: stretch;
+        //align-self: flex-start;
         margin: 0px;
         padding: 0px;
-        width: 280px;
+        //width: 280px;
     }
     &__li{
         margin-bottom: 7px; 
